--- a/src/components/navbar/css/index.css
+++ b/src/components/navbar/css/index.css
@@ -1,38 +1,38 @@
 .nav {
-  position: absolute;
-  top: 0.5rem;
-  left: 0.5rem;
-  bottom: 0.5rem;
-  right: 0.5rem;
-  font-family: Arial, Helvetica, sans-serif;
   display: grid;
+  font-family: Arial, Helvetica, sans-serif;
   grid-template-columns: 1fr 3fr;
-  grid-template-rows: max-content;
   text-align: center;
 }
 .nav .content {
   padding: 0.3rem;
-  border: 1px solid #000;
 }
 .nav .links {
+  position: absolute;
+  top: 2.5rem;
+  right: 0.5rem;
+  left: 0.5rem;
+  bottom: 100%;
   opacity: 0;
-  grid-column: 1/3;
-  height: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  transition: 0.5s;
+  transition: 0.75s;
 }
 .nav .links .link {
+  display: none;
   height: 0;
   transition: 0.5s;
 }
 .nav .show {
-  height: 100%;
+  z-index: 1;
+  background-color: #fff;
+  bottom: 0.5rem;
   opacity: 1;
 }
 .nav .show .link {
+  display: block;
   width: 33%;
   height: max-content;
   margin-bottom: 6rem;
