--- a/src/components/navbar/css/index.scss
+++ b/src/components/navbar/css/index.scss
@@ -1,33 +1,41 @@
+//Use global variables for the positions.
+
 .nav {
-    position: absolute;
-    top: 0.5rem; left: 0.5rem; bottom: 0.5rem; right: 0.5rem;
-    font-family: Arial, Helvetica, sans-serif;
+    //background-color: #fff;
     display: grid;
+    //top: 0.5rem; left: 0.5rem; bottom: 0.5rem; right: 0.5rem;
+    font-family: Arial, Helvetica, sans-serif;
     grid-template-columns: 1fr 3fr;
-    grid-template-rows: max-content;
     text-align: center;
-    .content {
-        padding: 0.3rem;
-        border: 1px solid #000;
-    }
+    .content { padding: 0.3rem; }
+    //.content:nth-child(1) { border-right: 2px solid #000; }
+    //.content:nth-child(2) { border-left: 2px solid #000; }
     .links {
+        position: absolute;
+        top: 2.5rem;
+        right: 0.5rem;
+        left: 0.5rem;
+        bottom: 100%;
         opacity: 0;
-        grid-column: 1 / 3;
-        height: 0;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        transition: 0.5s;
+        transition: 0.75s;
         .link {
+            display: none;
             height: 0;
             transition: 0.5s;
         }
     }
     .show {
-        height: 100%;
+        //Add other positions if nesscary
+        z-index: 1;
+        background-color: #fff;
+        bottom: 0.5rem;
         opacity: 1;
         .link {
+            display: block;
             width: 33%;
             height: max-content;
             margin-bottom: 6rem;
