--- a/src/components/navbar/index.scss
+++ b/src/components/navbar/index.scss
@@ -1,16 +1,18 @@
 nav {
     order: 1;
-    font-family: 'Clear', sans-serif;
     align-self: center; 
     width: 100%;
     ul { 
         display: grid;
+        list-style: none;
         grid-template-columns: 1fr 2fr 1fr;
         text-align: center;
+        .current {
+            border-bottom: 2px solid #000;
+        }
         li {
             font-size: 1.25rem;
             padding: 1.2rem 0;
-            list-style: none;
         }
     }
 }
