--- a/src/components/navbar/index.scss
+++ b/src/components/navbar/index.scss
@@ -5,7 +5,7 @@ nav {
     ul { 
         display: grid;
         list-style: none;
-        grid-template-columns: 1fr 2fr 1fr;
+        grid-template-columns: 1fr 1fr;
         text-align: center;
         .current {
             border-bottom: 2px solid #000;
