If there is a section within a list item set its display to none.

--- a/src/components/menu/index.scss
+++ b/src/components/menu/index.scss
@@ -5,6 +5,9 @@ section {
         li {
             font-size: 1.33rem;
             padding-bottom: 2rem;
+            section {
+                display: none;
+            }
         }
     }
 }
